--- a/app/src/main/res/layout/fragment_add_player.xml
+++ b/app/src/main/res/layout/fragment_add_player.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.AddPlayerFragment"
+    tools:context=".ui.addPlayer.AddPlayerFragment"
 
     android:padding="16dp" >
 
