--- a/app/src/main/res/layout/fragment_player_news.xml
+++ b/app/src/main/res/layout/fragment_player_news.xml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.playerChosen.bottomNavDestinations.PlayerNewsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/news_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="News"
-        android:textSize="48sp"
-        android:gravity="center"/>
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/headline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text = "Headline"
+        android:layout_marginTop="48dp"
+        android:textSize="48sp"
+        app:layout_constraintTop_toBottomOf="@id/news_label"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
