--- a/app/src/main/res/layout/fragment_player_news.xml
+++ b/app/src/main/res/layout/fragment_player_news.xml
@@ -4,28 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.playerChosen.bottomNavDestinations.PlayerNewsFragment">
+    tools:context=".ui.playerChosen.bottomNavDestinations.News.PlayerNewsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/news_label"
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/news_recycler"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="News"
-        android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/headline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text = "Headline"
-        android:layout_marginTop="48dp"
-        android:textSize="48sp"
-        app:layout_constraintTop_toBottomOf="@id/news_label"
-        app:layout_constraintStart_toStartOf="parent"/>
+        tools:listitem="@layout/news_item"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
