--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -12,8 +12,8 @@
 
         <ImageView
             android:id="@+id/news_image"
-            android:layout_width="105dp"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="90dp"
             android:src="@drawable/ic_baseline_image_72"
             android:contentDescription="@string/news_item_image_content_description"
             app:layout_constraintTop_toTopOf="parent"
@@ -23,10 +23,12 @@
             android:id="@+id/headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text = "Headline"
-            android:textSize="24sp"
+            tools:text = "Headline: Lorem upsum dolor sit amet, consetetur sadipscing elitr"
+            android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/news_image"/>
+            app:layout_constraintStart_toEndOf="@id/news_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constrainedWidth="true"/>
 
         <ImageView
             android:id="@+id/little_calendar"
