--- a/app/src/main/res/navigation/nav_graph_inner.xml
+++ b/app/src/main/res/navigation/nav_graph_inner.xml
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/playerTweetsFragment"
-        android:name="com.example.favouriteplayertracker.ui.playerChosen.bottomNavDestinations.PlayerTweetsFragment"
+        android:name="com.example.favouriteplayertracker.ui.playerChosen.bottomNavDestinations.tweets.PlayerTweetsFragment"
         android:label="fragment_player_tweets"
         tools:layout="@layout/fragment_player_tweets" />
 </navigation>
